fixed zscaler logo width on mobile

--- a/assets/css/allProjects.css
+++ b/assets/css/allProjects.css
@@ -134,8 +134,8 @@
   padding-top: 20px;
 }
 .project-logo .zscaler-logo {
-  width: 47%;
-  min-width: 186px;
+  width: 40%;
+  min-width: 132px;
   max-width: 285px;
 }
 .project-logo .nexj-logo {
